[DDO-2709] Improve Sherlock permissions model and allow GitHub linking (#134)
* better name

* permissions model

* the rest of the owl

* conflict
